#project(ladspalist "${CMAKE_C_FLAGS} -Wall -Werror")
#project(ladspalist CXX)

#add_executable( ladspalist ladspalist.c search.c )

#target_link_libraries( ladspalist
    #PUBLIC dl )

#install( TARGETS
    #ladspalist

   #RUNTIME DESTINATION bin
   #LIBRARY DESTINATION lib
   #ARCHIVE DESTINATION lib
#)
